--- a/week3.tex
+++ b/week3.tex
@@ -97,3 +97,28 @@ Or here:
 	Note that, thanks to the \texttt{exam} class, the correct answer is marked with a checkmark if and only if the document is compiled with printing of the answers enabled (e.g. by passing the option \texttt{answers} to the \texttt{exercises} class).
 	\QAuthor{question author: Mr. Hitchhiker}
 \end{solution}
+
+\question
+This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question.
+
+This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. 
+
+This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question.
+
+\begin{solution}
+	This solution is spread out over two pages!
+	This solution is spread out over two pages!
+	This solution is spread out over two pages!
+	This solution is spread out over two pages!
+	This solution is spread out over two pages!
+	This solution is spread out over two pages!
+	This solution is spread out over two pages!
+	This solution is spread out over two pages!
+	This solution is spread out over two pages!
+	This solution is spread out over two pages!
+	This solution is spread out over two pages!
+	This solution is spread out over two pages!
+	This solution is spread out over two pages!
+	This solution is spread out over two pages!
+	This solution is spread out over two pages!
+\end{solution}
