--- a/week3.tex
+++ b/week3.tex
@@ -11,7 +11,6 @@ Prove that for all $n\in\N_0$, for all finite sets $A_1,A_2,\dots,A_n$, \[\left|
 
 	Combining the two results, we find that $|A_1\cup A_2|=|A_1|+|A_2|-|A_1\cap A_2|$, which proves the case $n=2$.
 
-	\vspace{2mm}
 	We proceed using mathematical induction to prove the statement for all $n\geq2$. We have already proved the case $n=2$ and will use it as a base case.
 
 	Assume as induction hypothesis that the statement holds for some $n=k\geq2$. We have to show that it holds for $n=k+1$. That is, we have to show that for all finite sets $A_1,A_2,\dots,A_{k+1}$, \[\left|\bigcup_{i=1}^{k+1} A_i\right| = \sum_{\emptyset\neq J\subseteq\{1,\dots,k+1\}}(-1)^{|J|+1}\left|\bigcap_{j\in J}A_j\right|.\]
@@ -33,7 +32,7 @@ Prove that for all $n\in\N_0$, for all finite sets $A_1,A_2,\dots,A_n$, \[\left|
 		    & \text{\red{(absorbing $|A_{k+1}|$ into sum on the right, and rewriting bounds of sum on the left)}}                                                                                                                        \\
 		=~~ & \left(\sum_{\substack{\emptyset\neq J\subseteq\{1,\dots,k+1\}                                                                                                                                                              \\\text{s.t. }k+1\notin J}}(-1)^{|J|+1}\left|\bigcap_{j\in J}A_j\right|\right) + \sum_{\substack{\emptyset\neq J\subseteq\{1,\dots,k+1\}                                                                       \\\text{s.t. }k+1\in J}}(-1)^{|J|+1}\left|\bigcap_{j\in J}A_j\right| \\
 		    & \text{\red{(taking both sums together)}}                                                                                                                                                                                   \\
-		=~~ & \sum_{\emptyset\neq J\subseteq\{1,\dots,k+1\}                                                                       }(-1)^{|J|+1}\left|\bigcap_{j\in J}A_j\right|                                                          \\
+		=~~ & \sum_{\emptyset\neq J\subseteq\{1,\dots,k+1\}                                                                       }(-1)^{|J|+1}\left|\bigcap_{j\in J}A_j\right|                                                          
 	\end{align*}
 	\endgroup
 
@@ -103,7 +102,7 @@ This is a very long question. This is a very long question. This is a very long 
 
 This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. 
 
-This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question.
+This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. 
 
 \begin{solution}
 	This solution is spread out over two pages!
