--- a/week3.tex
+++ b/week3.tex
@@ -1,5 +1,5 @@
 \question
-Prove that for all $n\in\N_0$, for all finite sets $A_1,A_2,\dots,A_n$, \[\left|\bigcup_{i=1}^n A_i\right| = \sum_{\emptyset\neq J\subseteq\{1,\dots,n\}}(-1)^{|J|+1}\left|\bigcap_{j\in J}A_j\right|.\]
+Prove by mathematical induction that for all $n\in\N_0$, for all finite sets $A_1,A_2,\dots,A_n$, \[\left|\bigcup_{i=1}^n A_i\right| = \sum_{\emptyset\neq J\subseteq\{1,\dots,n\}}(-1)^{|J|+1}\left|\bigcap_{j\in J}A_j\right|.\]
 
 \begin{solution}
 	Observe that the statement is true for $n=0$ (as $|\emptyset|=0$) and $n=1$ (as $|A_1|=|A_1|$ for all finite sets $A_1$).
@@ -32,7 +32,7 @@ Prove that for all $n\in\N_0$, for all finite sets $A_1,A_2,\dots,A_n$, \[\left|
 		    & \text{\red{(absorbing $|A_{k+1}|$ into sum on the right, and rewriting bounds of sum on the left)}}                                                                                                                        \\
 		=~~ & \left(\sum_{\substack{\emptyset\neq J\subseteq\{1,\dots,k+1\}                                                                                                                                                              \\\text{s.t. }k+1\notin J}}(-1)^{|J|+1}\left|\bigcap_{j\in J}A_j\right|\right) + \sum_{\substack{\emptyset\neq J\subseteq\{1,\dots,k+1\}                                                                       \\\text{s.t. }k+1\in J}}(-1)^{|J|+1}\left|\bigcap_{j\in J}A_j\right| \\
 		    & \text{\red{(taking both sums together)}}                                                                                                                                                                                   \\
-		=~~ & \sum_{\emptyset\neq J\subseteq\{1,\dots,k+1\}                                                                       }(-1)^{|J|+1}\left|\bigcap_{j\in J}A_j\right|                                                          
+		=~~ & \sum_{\emptyset\neq J\subseteq\{1,\dots,k+1\}                                                                       }(-1)^{|J|+1}\left|\bigcap_{j\in J}A_j\right|
 	\end{align*}
 	\endgroup
 
@@ -100,9 +100,9 @@ Or here:
 \question
 This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question.
 
-This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. 
+This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question.
 
-This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. 
+This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question. This is a very long question.
 
 \begin{solution}
 	This solution is spread out over two pages!
