minor noninfluential changes

--- a/example-exam.tex
+++ b/example-exam.tex
@@ -2,6 +2,7 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{lipsum}
+\usepackage[base]{babel} % for lipsum
 
 % custom colors
 \renewcommand\colback{red!7}
@@ -19,8 +20,6 @@
 \newcommand{\headerleft}{Graph Algozzzzzzz (2024-2025)}
 \newcommand{\headermiddle}{}
 \newcommand{\headerright}{Midterm exam, page \thepage{} of \numpages}
-
-\renewcommand\O{\mathcal O}
 
 \begin{document}
 \begin{center}
