change 6mm to \@totalleftmargin

--- a/example-exam.tex
+++ b/example-exam.tex
@@ -1,16 +1,15 @@
-\documentclass[]{exercises}
+\documentclass[answers]{exercises}
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{lipsum}
 \usepackage[base]{babel} % for lipsum
 
 % custom colors
-\renewcommand\colback{red!7}
-\renewcommand\coltitle{red!50!black}
-\renewcommand\colbacktitle{red!5}
-\renewcommand\colborder{red}
+\renewcommand\colback{yellow!7}
+\renewcommand\coltitle{black}
+\renewcommand\colbacktitle{orange!20}
+\renewcommand\colborder{black}
 \renewcommand\ptscolor{\color{red}}
-\renewcommand\QAuthorcolor{orange!90}
 
 % custom box titles
 \renewcommand\instructionsboxtitle{Instructions (READ CAREFULLY)}
