new links in README

--- a/example-worksheet.tex
+++ b/example-worksheet.tex
@@ -1,6 +1,6 @@
 % File author: A. Hardeman
 
-\documentclass[answers]{exercises}
+\documentclass[]{exercises}
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{hyperref}
@@ -25,7 +25,7 @@
 	This document contains extra practice problems about induction.
 
     \vspace{2mm}
-    Actually, it contains only one problem that is copied eight times, but who cares ;)
+    Actually, it contains only one problem that is copied five times, but who cares ;)
 
 	\vspace{2mm}
 	If you wish to have your solution checked by a TA, email \href{mailto:secret@email.nl}{secret@email.nl}.
